--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
   get: ^4.7.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_native_splash: ^2.4.4
