--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   get: ^4.7.2
   flutter_rating_bar: ^4.0.1
+  buttons_tabbar: ^1.3.15
 
 dev_dependencies:
   flutter_native_splash: ^2.4.4
