--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.7.2
   flutter_rating_bar: ^4.0.1
   buttons_tabbar: ^1.3.15
+  sleek_circular_slider: ^2.0.1
 
 dev_dependencies:
   flutter_native_splash: ^2.4.4
