--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   buttons_tabbar: ^1.3.15
   sleek_circular_slider: ^2.0.1
+  audio_service: ^0.18.17
+  just_audio: ^0.9.46
+  get_it: ^8.2.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_native_splash: ^2.4.4
